2004-07-08(Thu) 08:31:33 +0900  Koichi Sasada  <ko1@atdot.net>

	* tagparts.rb : add tree2string


2004-07-07(Wed) 17:53:27 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb : fix socket bugs


2004-07-07(Wed) 17:15:07 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : add basic authentication, and some fixs

	* plugins/shellbot.nb, plugins/evalbot.nb : undo


2004-07-07(Wed) 16:04:30 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/shellbot.nb, plugins/evalbot.nb : fix bugs
	around constant search path

	* ndk_state.rb(channel_member_mode) : added

	* ndk_bot.rb : remove @raw_prefix


2004-07-07(Wed) 10:18:51 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : fix some issues


2004-07-06(Tue) 22:38:58 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb : fix exception bug

	* ndk_manager.rb, ndk_config.rb : fix reload process

	* nadokarc : fix typo

	* plugins/weba.nb : fix some bugs, support writing

	* tagparts.rb : added(required by weba)


2004-07-05(Mon) 15:40:09 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb : change default Channel_Info,
	:timing as :startup

	* ndk_manager.rb : fix nick change bugs

	* plugins/weba.nb : added(test version)


2004-07-05(Mon) 13:13:26 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : add execption hook(client thread)


2004-07-05(Mon) 09:43:12 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix bug


2004-07-05(Mon) 08:31:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_logger.rb : ignore IOError when logging

	* plugins/googlebot.nb : add option ':googlec_maxwords'


2004-07-05(Mon) 08:02:43 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : auto detect filename encoding(carelessly)


2004-07-05(Mon) 07:28:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc, ndk_config.rb : add 'Mode' option and
	  Channel_Info[:initial_mode] option

	* nadokarc, ndk_config.rb : add 'FilenameEncoding' option

	* ndk_logger.rb, ndk_config.rb : support japanese character